# manipulation_examples

./: .travis.yml  README.md  manipulation.rosinstall  manipulation_examples.rosinstall
go_to_location/: CMakeLists.txt
go_to_location_demo/: CMakeLists.txt  package.xml
inbound_pick/: CMakeLists.txt
inbound_pick_demo/: CMakeLists.txt  package.xml
inbound_pick_demo/src/: inbound_pick_client_node.cpp
manipulation_cell_ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
manipulation_cell_ur5_moveit_config/config/: dirrt_planning.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  static_cell.srdf
manipulation_cell_ur5_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  dirrt_planning_pipeline.launch.xml  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit.rviz.bck  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  static_cell_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
manipulation_demo_cell/: CMakeLists.txt  package.xml
manipulation_demo_tools/: CMakeLists.txt  package.xml
manipulation_demo_tools/src/: manipulation_fake_tool_server_node.cpp
manipulation_example_cell/manipulation_cell_configurations/: CMakeLists.txt  package.xml
manipulation_example_cell/manipulation_cell_configurations/launch/: fake.launch
manipulation_example_cell/manipulation_cell_description/: CMakeLists.txt  package.xml
manipulation_example_cell/manipulation_cell_description/launch/: log.launch  test.launch  upload.launch  ur10e_upload.launch
manipulation_example_cell/manipulation_cell_description/urdf/: manipulation_cell.xacro
manipulation_example_cell/manipulation_example_cell/: CMakeLists.txt  package.xml
manipulation_example_cell/manipulation_fake_tool/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  package.xml
manipulation_example_cell/manipulation_fake_tool/atomic_configure/: .rosinstall  local_setup.sh  setup.sh
manipulation_example_cell/manipulation_fake_tool/catkin_generated/: generate_cached_setup.py  setup_cached.sh
manipulation_example_cell/manipulation_fake_tool/catkin_generated/installspace/: .rosinstall  local_setup.sh  setup.sh
manipulation_example_cell/manipulation_fake_tool/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
manipulation_example_cell/manipulation_fake_tool/src/: manipulation_fake_tool_server_node.cpp
manipulation_example_cell/manipulation_moveit_config/: CMakeLists.txt  package.xml
manipulation_example_cell/manipulation_moveit_config/config/: manipulation.srdf
manipulation_example_cell/manipulation_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  dirrt_planning_pipeline.launch.xml  fake_moveit_controller_manager.launch.xml  gazebo.launch  human_aware_planning_pipeline.launch.xml  manipulation_moveit_controller_manager.launch.xml  move_group.launch  real.launch  (+7 more)
manipulation_example_cell/manipulation_skills/: CMakeLists.txt
manipulation_fake_tool/src/: manipulation_fake_tool_server_node.cpp
manipulation_skills/: README.md  package.xml
manipulation_skills/config/: go_to_location_server.yaml  inbound_server.yaml  objects_description.yaml  objects_distribution.yaml  outbound_server.yaml  recipe.yaml  slots_distribution.yaml  static_scene.yaml  types_description.yaml
manipulation_skills/launch/: goto.launch  load_objects.launch  pick.launch  place.launch  scene_spawner.launch  skills.launch
manipulation_tests/go_to_location_test/: CMakeLists.txt  package.xml
manipulation_tests/inbound_pick_test/: CMakeLists.txt  package.xml
manipulation_tests/manipulation_tests/: CMakeLists.txt  package.xml
manipulation_tests/outbound_place_test/: CMakeLists.txt  package.xml
manipulation_ur5_cell_configurations/: CMakeLists.txt  package.xml
manipulation_ur5_cell_configurations/config/: controllers_configurations.yaml  controllers_dispatches.yaml  elmo_controllers.yaml  elmo_hw.yaml  fake_elmo_hw.yaml  fake_ur5_hw.yaml  planner_controllers.yaml  planner_hw.yaml  ur5_controllers.yaml  ur5_hw.yaml
manipulation_ur5_cell_configurations/launch/: ur5.launch
manipulation_ur5_cell_descriptions/: CMakeLists.txt  package.xml
manipulation_ur5_cell_descriptions/config/: joint_limits.yaml  ur10_calib.yaml
manipulation_ur5_cell_descriptions/launch/: cell_ur5_test.launch  cell_ur5_upload.launch  cella_ur10_test.launch.bck  cella_ur10_upload.launch.bck  completo_test.launch.bck  completo_upload.launch.bck  dimostratore.rviz
manipulation_ur5_cell_descriptions/meshes/: conveyor_system.STL  conveyor_system.dae  palmo.dae
manipulation_ur5_cell_descriptions/urdf/: cell_ur5.xacro  cella_ur10.xacro  cella_ur5.xacro  completo.xacro  conveyor_system.urdf.xacro  elmo_linear_guide.urdf.xacro  elmo_linear_guide_standalone.xacro  fixed_parts.xacro  palmo.dae  palmo.urdf.xacro  shopdesk_dim.urdf.xacro  swiss_cameras.urdf.xacro  ur10.xacro  ur5.xacro  wheeled_table.urdf.xacro  wheeled_table_dim.urdf.xacro  wheeled_table_standalone.urdf.xacro
manipulation_ur5_cell_sensors/: CMakeLists.txt  package.xml
manipulation_ur5_cell_sensors/config/: tag_settings.yaml  tags.yaml
manipulation_ur5_cell_sensors/launch/: apriltags_rs1.launch  apriltags_rs2.launch  calibration_rs1.launch  calibration_rs2.launch  centroid.yaml  rs_camera1.launch  rs_camera2.launch  test_calibration_rs1.launch  test_calibration_rs2.launch  tof_cameras.launch
multi_skills_demo/: CMakeLists.txt  package.xml
multi_skills_demo/src/: multi_skills_demo_node.cpp
multi_skills_example/: CMakeLists.txt  package.xml
multi_skills_example/src/: multi_skills_test_node.cpp
outbound_place/: CMakeLists.txt
outbound_place_demo/: CMakeLists.txt  package.xml
outbound_place_demo/src/: outbound_place_client_node.cpp
(+12 files in other folders)
