<?xml version="1.0"?>
<package format="2">
  <name>manipulation_ur5_cell_descriptions</name>
  <version>0.0.0</version>
  <description>The manipulation_ur5_cell_descriptions package</description>

  <maintainer email="enrico.villagrossi@stiima.cnr.it">Enrico Villagrossi</maintainer>
  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_export_depend>ur_description</build_export_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>robotiq_2f_85_gripper_visualization</exec_depend>
  <exec_depend>jsk_rviz_plugins</exec_depend>
  <exec_depend>agni_tf_tools</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
