<?xml version="1.0"?>
<package format="2">
  <name>manipulation_ur5_cell_sensors</name>
  <version>0.0.0</version>
  <description>The manipulation_ur5_cell_sensors package</description>

  <maintainer email="enrico.villagrossi@stiima.cnr.it">Enrico Villagrossi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>manipulation_ur5_cell_descriptions</exec_depend>

  <export>
  </export>
</package>
