<?xml version="1.0"?>
<package format="2">
  <name>manipulation_fake_tool</name>
  <version>0.0.0</version>
  <description>The manipulation_demo_tools package simulate fake gripper server</description>
  <maintainer email="manuel.beschi@stiima.cnr.it">Manuel Beschi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
   <build_depend>manipulation_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>manipulation_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>manipulation_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
